commit tree 87013f3dfab770e2dacc18219c439f5c86d2d204

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="bg-dark">
-    <nav class="avbar navbar-expand-lg navbar-dark bg-primary">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-primary">
         <img class="w-25 m-1" id="pokemon-logo"
             src="https://raw.githubusercontent.com/learn-co-curriculum/js-pokemon-search-practice-assignment/master/images/pokemon.png"
             alt="">
